(make doc) remove references to removed projects
* in both Makefile.am and .tex files

ROSE-2022

--- a/docs/Rose/Tutorial/tutorial.tex.in
+++ b/docs/Rose/Tutorial/tutorial.tex.in
@@ -309,7 +309,8 @@ transformations and optimizations.}
 %\input{globalVariableHandling}
 %-------end of chapter for AST construction
 
-\input{parserBuildingBlocks}
+%\input{parserBuildingBlocks}
+% This project has been removed.
 
 \input{addingComments}  % handling preprocessing information
 \input{partialRedundancyElimination}
