(Build) Install libbatSupport.so when building with CMake
* The tools/BinaryAnalysis/CMakeLists.txt was missing the install
  command for libbatSupport.so. Also the name was wrong (libbat.so)
  which was not compatible with Autotools or Tup build systems

RPM-246

--- a/tools/BinaryAnalysis/CMakeLists.txt
+++ b/tools/BinaryAnalysis/CMakeLists.txt
@@ -2,7 +2,9 @@ if(enable-binary-analysis)
   include_directories(. ${ROSE_INCLUDES})
 
   add_library(bat SHARED batSupport.C)
+  set_target_properties(bat PROPERTIES OUTPUT_NAME "batSupport")
   target_link_libraries(bat ROSE_DLL)
+  install(TARGETS bat DESTINATION ${ROSE_LIB_DIR_NAME})
 
   add_executable(bat-ana bat-ana.C)
   target_link_libraries(bat-ana bat ROSE_DLL)
