--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(RoseAST OBJECT
-  graphviz.C
+  graphviz.C NodeId.C
   io/merge.C io/link.C io/delete.C io/share.C io/load.C
   checker/cmdline.C checker/checker.C
   checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C
@@ -13,5 +13,5 @@ add_dependencies(RoseAST rosetta_generated)
 install(FILES ../AST.h DESTINATION ${INCLUDE_INSTALL_DIR}/Rose)
 
 install(FILES
-  cmdline.h IO.h Checker.h Defect.h Utils.h
+  cmdline.h IO.h NodeId.h Checker.h Defect.h Utils.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/AST)
