(NodeId) Each AST node can not be identified by a string
- Rose/AST/NodeId.h defines a NodeId class
- tests added at astNodeIdTests

RC-1361

--- a/tests/nonsmoke/functional/roseTests/CMakeLists.txt
+++ b/tests/nonsmoke/functional/roseTests/CMakeLists.txt
@@ -6,6 +6,7 @@ if(enable-c)
   add_subdirectory (astPerformanceTests)
   add_subdirectory (astProcessingTests)
   add_subdirectory (astQueryTests)
+  add_subdirectory (astNodeIdTests)
   add_subdirectory (astRewriteTests)
   add_subdirectory (astSymbolTableTests)
   add_subdirectory (astTokenStreamTests)
