(Support) Upgrade to latest Sawyer release
* Sawyer::parse<T>(const std::string&) parses the string as an
  integral value of type T if possible, and gracefully handles
  overflows by returning Sawyer::Result<T,E>.

* Sawyer::Result<T,E>'s bool conversion is explicit.

* New Sawyer::Time type for representing and parsing ISO 8601 dates
  and times.

* Extensive unit tests for Sawyer::parse.

* Extensive unit tests for Sawyer::Time.

* StringUtility::toNumber<T> is now implemented in terms of
  Sawyer::parse<T>.

RPM-212

--- a/tests/smoke/unit/Sawyer/Makefile.am
+++ b/tests/smoke/unit/Sawyer/Makefile.am
@@ -36,7 +36,9 @@ sawyer_checkers =				\
 	markupUnitTests				\
 	resultUnitTests				\
 	workListTests				\
-	cmdUnitTests
+	cmdUnitTests                            \
+	parseUnitTests				\
+	timeUnitTests
 
 if ROSE_HAVE_BOOST_SERIALIZATION_LIB
 sawyer_checkers += serializationUnitTests
@@ -69,7 +71,9 @@ noinst_PROGRAMS +=				\
 	markupUnitTests				\
 	resultUnitTests     			\
 	workListTests				\
-	cmdUnitTests
+	cmdUnitTests				\
+	parseUnitTests				\
+	timeUnitTests
 
 if ROSE_HAVE_BOOST_SERIALIZATION_LIB
 noinst_PROGRAMS += serializationUnitTests
@@ -104,6 +108,7 @@ serializationUnitTests_SOURCES	 = serializationUnitTests.C
 databaseUnitTests_SOURCES	 = databaseUnitTests.C
 workListTests_SOURCES		 = workListTests.C
 resultUnitTests_SOURCES          = resultUnitTests.C
+parseUnitTests_SOURCES		 = parseUnitTests.C
 
 # Test targets
 sawyer_targets = $(addsuffix .passed, $(sawyer_checkers))
