--- a/tests/nonsmoke/specimens/Makefile.am
+++ b/tests/nonsmoke/specimens/Makefile.am
@@ -1,2 +1,2 @@
 include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
-SUBDIRS = binary c c++ fortran java cil
+SUBDIRS = binary c c++ fortran java
