(Code cleanup) move (and delete) Fortran_to_C project
- Fortran_to_C project project removed and archived
- files transferred to rosecompiler2 /rose-tools/for2cpp.git
  - expected to update to conversion to C++ rather than C

ISCP-22

--- a/projects/RoseBlockLevelTracing/Makefile.am
+++ b/projects/RoseBlockLevelTracing/Makefile.am
@@ -2,7 +2,18 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 SUBDIRS=\
 	src 
+
+#####
+# The source files used for testing were all Fortran *.F sources
+# and had been removed previously by someone. It appeared that these
+# files were translanted to C and then the tools in this project run
+# on them. Since the Fortran_to_C translator is not maintained
+# and has been removed from the ROSE distribution project files,
+# the test files have been removed.  The tests directory had been
+# removed from the SUBDIRS list previously [Rasmussen, 2022.10.1].
+#
 #	tests
+#
 
 EXTRA_DIST=\
 	src/README
