(Binary Analysis) Added SgAsmPEExportEntry::biasedOrdinal
* Since its get_ordinal returns the unbiased ordinal value as stored
  in the file, but dynamic linking uses biased ordinals, this new
  method examines the AST to compute the biased ordinal.

RPM-260

--- a/src/frontend/Disassemblers/Makefile.am
+++ b/src/frontend/Disassemblers/Makefile.am
@@ -8,7 +8,7 @@ noinst_LTLIBRARIES = libroseDisassemblers.la
 libroseDisassemblers_la_DEPENDENCIES =
 
 libroseDisassemblers_la_SOURCES = SgAsmBlock.C SgAsmFunction.C					\
-	SgAsmInstruction.C SgAsmAarch32Instruction.C						\
+	SgAsmInstruction.C SgAsmAarch32Instruction.C SgAsmPEExportEntry.C			\
 	SgAsmAarch64Instruction.C SgAsmPowerpcInstruction.C					\
 	SgAsmX86Instruction.C SgAsmCilInstruction.C SgAsmJvmInstruction.C			\
 	SgAsmMipsInstruction.C SgAsmM68kInstruction.C SgAsmNullInstruction.C			\
